--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "axios": "^1.7.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "playwright": "^1.46.1",
+    "playwright-extra": "^4.3.6",
+    "playwright-extra-plugin-stealth": "^0.0.1",
+    "puppeteer": "^23.1.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
